[workspace]
members = [
  "zomes/file_storage",  
  "zomes/tags",
  "zomes/peershare"
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"


[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", rev = "7f65e8f941b9c003133b265d06f3334a9cd60d54", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "68a49be953ecf4ffa228633a197b7ba73350b803", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "68a49be953ecf4ffa228633a197b7ba73350b803", package = "holo_hash"}
