[workspace]
members = [
  "zomes/file_storage",  
  "zomes/tags",
  "zomes/peershare"
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"


[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "60a906212c17ee067b31511e6b2957746d86297b", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "60a906212c17ee067b31511e6b2957746d86297b", package = "holo_hash"}
